syntax = "proto3";

package parser;

option go_package = "/services/proto";

service ParserSvc {
  rpc Html(HtmlRequest) returns (HtmlResponse);
  rpc Image(ImageRequest) returns (ImageResponse);
}

message HtmlRequest {
  string url = 1;
}

message HtmlResponse {
  string content = 1;
}

message ImageRequest {
  string url = 1;
}

message ImageResponse {
  bytes content = 1;
}
